// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bidirectional Both empty 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Bidirectional Both match 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Bidirectional different cell 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c1": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              4004729339,
            ],
          },
          3649130009,
        ],
      },
      2754557355,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2754557355,
]
`;

exports[`Bidirectional different row 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              3406116407,
            ],
          },
          1579839748,
        ],
      },
      716291149,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  716291149,
]
`;

exports[`Bidirectional different table 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
          },
          811394032,
        ],
      },
      607943769,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  607943769,
]
`;

exports[`Bidirectional different tables 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@100005DK@@",
          {
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
          },
          2770261118,
        ],
      },
      2491797273,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2491797273,
]
`;

exports[`Bidirectional different value 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@100005DK@@",
      {
        "v1": [
          "Hc2DO@100005DK@@",
          2,
          2804922642,
        ],
      },
      4156463449,
    ],
  ],
  4156463449,
]
`;

exports[`Bidirectional different values 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@100005DK@@",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@100005DK@@",
          2,
          2804922642,
        ],
      },
      997597715,
    ],
  ],
  997597715,
]
`;

exports[`Bidirectional store1 empty 1`] = `
[
  "Hc2DO@000005DK@@",
  [
    [
      "Hc2DO@000005DK@@",
      {
        "t1": [
          "Hc2DO@000005DK@@",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          3344002712,
        ],
        "t2": [
          "Hc2DO@000005DK@@",
          {
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          1360887207,
        ],
      },
      2945952928,
    ],
    [
      "Hc2DO@000005DK@@",
      {
        "v1": [
          "Hc2DO@000005DK@@",
          1,
          1915036128,
        ],
        "v2": [
          "Hc2DO@000005DK@@",
          2,
          2554361111,
        ],
      },
      1072194670,
    ],
  ],
  2424293582,
]
`;

exports[`Bidirectional store1 missing cell 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              3406116407,
            ],
          },
          1579839748,
        ],
      },
      716291149,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  716291149,
]
`;

exports[`Bidirectional store1 missing row 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
          },
          811394032,
        ],
      },
      607943769,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  607943769,
]
`;

exports[`Bidirectional store1 missing table 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@100005DK@@",
          {
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
          },
          2770261118,
        ],
      },
      2491797273,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2491797273,
]
`;

exports[`Bidirectional store1 missing tables 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c1": [
                  "Hc2DO@100005DK@@",
                  1,
                  2428480261,
                ],
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              2912646848,
            ],
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
          },
          4081776890,
        ],
        "t2": [
          "Hc2DO@100005DK@@",
          {
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              140652553,
            ],
          },
          2770261118,
        ],
      },
      708370716,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  1616663150,
]
`;

exports[`Bidirectional store1 missing value 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@100005DK@@",
      {
        "v1": [
          "Hc2DO@100005DK@@",
          1,
          2428480261,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      3887201811,
    ],
  ],
  3887201811,
]
`;

exports[`Bidirectional store1 missing values 1`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@100005DK@@",
      {
        "v1": [
          "Hc2DO@100005DK@@",
          1,
          2428480261,
        ],
        "v2": [
          "Hc2DO@100005DK@@",
          2,
          2804922642,
        ],
      },
      4098276824,
    ],
  ],
  618378886,
]
`;

exports[`Bidirectional store2 empty 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Bidirectional store2 missing cell 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "Hc2DO@100008DKS9",
      {
        "t1": [
          "Hc2DO@100008DKS9",
          {
            "r1": [
              "Hc2DO@100008DKS9",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              1094022756,
            ],
          },
          1399802369,
        ],
      },
      1970855921,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1970855921,
]
`;

exports[`Bidirectional store2 missing row 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "Hc2DO@100008DKS9",
      {
        "t1": [
          "Hc2DO@100008DKS9",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@100008DKS9",
              {
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              4143335884,
            ],
          },
          1139223030,
        ],
      },
      2596656991,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2596656991,
]
`;

exports[`Bidirectional store2 missing table 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "Hc2DO@100008DKS9",
      {
        "t1": [
          "Hc2DO@000005DK@@",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          3344002712,
        ],
        "t2": [
          "Hc2DO@100008DKS9",
          {
            "r2": [
              "Hc2DO@100008DKS9",
              {
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              4143335884,
            ],
          },
          3584768713,
        ],
      },
      3128009044,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3128009044,
]
`;

exports[`Bidirectional store2 missing tables 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "Hc2DO@100008DKS9",
      {
        "t1": [
          "Hc2DO@100008DKS9",
          {
            "r1": [
              "Hc2DO@100008DKS9",
              {
                "c1": [
                  "Hc2DO@100008DKS9",
                  1,
                  3825858970,
                ],
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              463105251,
            ],
            "r2": [
              "Hc2DO@100008DKS9",
              {
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              4143335884,
            ],
          },
          2474940648,
        ],
        "t2": [
          "Hc2DO@100008DKS9",
          {
            "r2": [
              "Hc2DO@100008DKS9",
              {
                "c2": [
                  "Hc2DO@100008DKS9",
                  2,
                  2627627285,
                ],
              },
              4143335884,
            ],
          },
          3584768713,
        ],
      },
      111103868,
    ],
    [
      "Hc2DO@000005DK@@",
      {
        "v1": [
          "Hc2DO@000005DK@@",
          1,
          1915036128,
        ],
        "v2": [
          "Hc2DO@000005DK@@",
          2,
          2554361111,
        ],
      },
      1072194670,
    ],
  ],
  964111122,
]
`;

exports[`Bidirectional store2 missing value 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@100008DKS9",
      {
        "v1": [
          "Hc2DO@100008DKS9",
          1,
          3825858970,
        ],
        "v2": [
          "Hc2DO@000005DK@@",
          2,
          2554361111,
        ],
      },
      2184233399,
    ],
  ],
  2184233399,
]
`;

exports[`Bidirectional store2 missing values 1`] = `
[
  "Hc2DO@100008DKS9",
  [
    [
      "Hc2DO@000005DK@@",
      {
        "t1": [
          "Hc2DO@000005DK@@",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          3344002712,
        ],
        "t2": [
          "Hc2DO@000005DK@@",
          {
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          1360887207,
        ],
      },
      2945952928,
    ],
    [
      "Hc2DO@100008DKS9",
      {
        "v1": [
          "Hc2DO@100008DKS9",
          1,
          3825858970,
        ],
        "v2": [
          "Hc2DO@100008DKS9",
          2,
          2627627285,
        ],
      },
      4006401115,
    ],
  ],
  1096513787,
]
`;

exports[`Unidirectional autoSave1 but not autoLoad2 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Unidirectional autoSave1 but not autoLoad2 2`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Unidirectional save1 but not autoLoad2 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Unidirectional save1 but not autoLoad2 2`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;
